<resources>
    <string name="app_name">TutorRoom</string>
    <string name="storage_perm">SDCard Read/Write permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="check_internet">Check Internet Connection</string>
    <string name="get_start">GET START</string>
    <string name="start">Start</string>
    <string name="name">Hi, guest!</string>
    <string name="welcome">Welcome to Engleezi!</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="enter_pass">Enter Your Password</string>
    <string name="reenter_pass">Re-Enter Password</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="signin">SIGN IN</string>
    <string name="login_with">Or Login with:</string>
    <string name="forget_pass">Forget password?</string>
    <string name="login">LOGIN</string>
    <string name="lmd_sign_out_msg">Are you sure you want to sign out?</string>
    <string name="change_user">Change User</string>
    <string name="enter_phone">Enter Your Phone</string>
    <string name="signup">Sign Up</string>
    <string name="have_account">Already have an account?</string>
    <string name="have_no_account">Do not have an account?</string>
    <string name="name_error">* Please enter name</string>
    <string name="pass_error">* Please enter password</string>
    <string name="repass_error">* Please reenter password</string>
    <string name="email_error">* Please enter email</string>
    <string name="pass_not_matched">* Passwords are not matched</string>
    <string name="invalid_email">* Invalid Email</string>
    <string name="pass_min_length">* Password must have 6–10 Characters</string>
    <string name="phone_error">* Please enter phone number</string>
    <string name="gta_failed">Backing up to GTA Studio Failed!</string>
    <string name="packagee">Package</string>
    <string name="lesson">Lesson</string>
    <string name="classs">Class</string>
    <string name="tutor">Tutor</string>
    <string name="schedule">Schedule</string>
    <string name="store">Store</string>
    <string name="faq">FAQ</string>
    <string name="setting">Setting</string>
    <string name="signout">Sign Out</string>
    <string name="online_support">Online Support</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="tu_search">Search&#8230;</string>
    <string name="tu_lst_title">Tutor</string>
    <string name="teach_exp">Teaching Exp</string>
    <string name="teach_experience">Teaching Experience : %1$s</string>
    <string name="credit_weight">Credit Weight</string>
    <string name="location">Location</string>
    <string name="loading">Loading…</string>
    <string name="book_now">Book Now</string>
    <string name="years">%1$s Years</string>
    <string name="speciality">Speciality : %1$s</string>
    <string name="spoken_lang">Spoken Language : %1$s</string>
    <string name="self_intro">Self Introduction : </string>
    <string name="locationn">Location : %1$s</string>
    <string name="tu_lst_refresh_failed">Tutor list refresh failed.</string>
    <string name="lesson_lst_refresh_failed">Lesson list refresh failed.</string>
    <string name="tu_lst_cant_download_video">Can\'t download audio file.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="choose_lesson">Choose Lesson</string>
    <string name="choose_time">Choose Time</string>
    <string name="choose_tutor">Choose Tutor</string>
    <string name="choose_package">Select Package</string>
    <string name="search">Search</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="single_book">Single Booking</string>
    <string name="select_lesson">Select lesson to continue</string>
    <string name="select_date">Select date to continue</string>
    <string name="select_tutor">Select tutor to confirm the booking</string>
    <string name="select_date_empty">Select date to continue booking</string>
    <string name="select_date_err">You must book the lesson %1$s minutes in advance</string>
    <string name="get_lesson_err">Downloading lessons failed</string>
    <string name="description">Description</string>
    <string name="no_data">No Data for your request</string>
    <string name="no_tutor">No Tutor found</string>
    <string name="profile">Profile</string>
    <string name="namee">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="edit">Edit</string>
    <string name="change_pass">Change Password</string>
    <string name="address">Address</string>
    <string name="native_lang">Native Language</string>
    <string name="learning_lang">Learning Language</string>
    <string name="ac_take_photo">Take Photo</string>
    <string name="ac_choose_from_photos">Camera Rolls</string>
    <string name="ot_capture">Capture</string>
    <string name="ac_info_choose">Choose</string>
    <string name="ac_no_photo_url">Photo unreadable</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="pwd_changed">Password has been changed successfully</string>
    <string name="old_pass_error">* Please enter old password</string>
    <string name="new_pass_error">* Please enter new password</string>
    <string name="conf_new_pass_error">* Confirm new password</string>
    <string name="bo_booking_confirmed">Booking Confirmed!</string>
    <string name="bo_view_my_schedule">View my schedule</string>
    <string name="bo_book_another_lesson">Book another lesson</string>
    <string name="bo_view_other_tutors">View other tutors</string>
    <string name="bo_back_main_menu">Back to main menu</string>
    <string name="book_new">+ Book New Lesson</string>
    <string name="lesson_book">Single Classroom</string>
    <string name="topic_book">Trial classroom</string>
    <string name="packagee_detail">Package Detail</string>
    <string name="lessons">Lessons</string>
    <string name="total_time">Total Time</string>
    <string name="course_structure">Course Structure</string>
    <string name="mins">mins</string>
    <string name="no_lesson">No Lesson found</string>
    <string name="no_package">No Package found</string>
    <string name="lesson_detail">Lesson Detail</string>
    <string name="minute">%1$s minutes</string>
    <string name="classroom">ClassRoom</string>
    <string name="cr_send">Send</string>
    <string name="cr_join_class_room">Joining to the class room&#8230;</string>
    <string name="os_online_support_lbl">Online Support</string>
    <string name="ac_faq">FAQ</string>
    <string name="cr_camera_permission">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="cr_leave_room">Leave the Classroom?</string>
    <string name="cr_leave_room_msg">This movement will end the call and leave the Classroom.</string>
    <string name="cr_leave_room_leave">Leave</string>
    <string name="cr_leave_room_cancel">Cancel</string>
    <string name="sd_network_msg">Make sure your device has enough free memory and stable network connection.</string>
    <string name="sd_network_continue">Continue</string>
    <string name="sd_network_notice">Notice</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="cr_tutor_soon">Tutor will be online soon.</string>
    <string-array name="tutor_feedback_type">
        <item>Tutor Feedback</item>
        <item>Call Quality</item>
        <item>Content</item>
        <item>Other Comments</item>
    </string-array>
    <string name="tu_tutor_feedback">How was your tutor today?</string>
    <string name="tu_star_3_5">Thanks! Do you have any further suggestions?</string>
    <string name="tu_star_1_2">Sorry to hear that, would you give us more feedbacks?</string>
    <string name="tu_call_quality">How was the call quality today?</string>
    <string name="tu_feedback_content">How was the lesson content today?</string>
    <string name="tu_feedback_others">Do you have any additional comments?</string>
    <string name="tu_enter_comment_here">Enter your comment here&#8230;</string>
    <string name="tu_rating_notice">Notice: \nYou can swipe right to give more ratings and comments.</string>
    <string name="tu_btn_rating_submit">Submit</string>
    <string name="tu_rating_drag_and_press">Press or drag to rate</string>
    <string name="tu_feedback_title">Tutor Feedback</string>
    <string name="have">You have</string>
    <string name="price_tier">Price Tier</string>
    <string name="credits">Credits</string>
    <string name="_credits">%1$s Credits</string>
    <string name="credit">Credit</string>
    <string name="usd">USD</string>
    <string name="buy">Buy now</string>
    <string name="pay_paypal">Pay with Paypal</string>
    <string name="buy_ammount">Buy a different amount</string>
    <string name="ask_consultant">Ask your consultant about discount offers</string>
    <string name="contact_us">Contact Us</string>
    <string name="dollar">$</string>
    <string name="credit_100">100 Credit</string>
    <string name="credit_200">200 Credit</string>
    <string name="credit_300">300 Credit</string>
    <string name="credit_1000">$ 1000.0 USD</string>
    <string name="credit_2000">$ 2000.0 USD</string>
    <string name="credit_3000">$ 3000.0 USD</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="amount">Amount</string>
    <string name="no_credit_tier">No Credit Tier found</string>
    <string name="faq_1">Can’t see the tutor’s video</string>
    <string name="faq_2">Can’t see the student video</string>
    <string name="faq_3">Can’t send messages</string>
    <string name="faq_4">Can’t upload PDF</string>
    <string name="faq_5">Can’t save file</string>
    <string name="faq_6">Can’t video record lesson</string>
    <string name="faq_7">Websocket disconnect</string>
    <string name="faq_8">Internet connection unstable</string>
    <string name="faq_9">Can only see whiteboard tools moving?</string>
    <string name="faq_10">What happens if the student leaves the class?</string>
    <string name="faq_11">What happens if tutor leaves the class?</string>
    <string name="faq_12">How to join class?</string>
    <string name="faq_13">How to know if i’ve successfully joined class?</string>
    <string name="faq_14">How to leave class?</string>
    <string name="faq_15">Does it matter if student or tutor leaves first?</string>
    <string name="faq_16">How to zoom in Whiteboard?</string>
    <string name="faq_17">How to move the screen?</string>
    <string name="faq_18">Can I print?</string>
    <string name="faq1_content1">a. Check the network connection with the link: http://www.speedtest.net/</string>
    <string name="faq1_content2">b. Check if the audio works or not</string>
    <string name="faq1_content3">c. Quit from the current classroom and rejoin again</string>
    <string name="faq2_content1">a.	Check if the camera works properly</string>
    <string name="faq2_content2">b.	Check if the camera works successfully in other software (Skype, QQ, etc)</string>
    <string name="faq3_content1">a.	Quit from the current classroom and rejoin again.</string>
    <string name="faq3_content2">b.	If not working, alert your tutor. They can address the problem from their side</string>
    <string name="faq4_content1">You are not allowed to upload PDF file.</string>
</resources>