<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"/>

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="@dimen/dp100"
        android:layout_height="@dimen/dp100"
        android:layout_below="@id/tool_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp40"
        android:layout_marginBottom="@dimen/dp10"
        android:src="@mipmap/password_lock"/>

    <EditText
        android:id="@+id/old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_icon"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/password_field_bg"
        android:hint="@string/old_password"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:padding="@dimen/dp10"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/old_pass_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/old_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp8"
        android:fontFamily="@fonts/microsoft_jhenghei"
        android:text="@string/old_pass_error"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/old_pass_error_tv"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/password_field_bg"
        android:hint="@string/new_password"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:padding="@dimen/dp10"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/pass_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp8"
        android:fontFamily="@fonts/microsoft_jhenghei"
        android:text="@string/new_pass_error"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/confirm_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_error_tv"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/password_field_bg"
        android:hint="@string/confirm_new_pass"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:padding="@dimen/dp10"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/confirm_pass_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_new_pass"
        android:layout_centerHorizontal="true"
        android:fontFamily="@fonts/microsoft_jhenghei"
        android:text="@string/conf_new_pass_error"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/change_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_pass_error_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp30"
        android:background="@drawable/blue_btn_bg"
        android:paddingLeft="@dimen/dp30"
        android:paddingTop="@dimen/dp10"
        android:paddingRight="@dimen/dp30"
        android:paddingBottom="@dimen/dp10"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</RelativeLayout>