<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingTop="@dimen/dp20"
              android:paddingBottom="@dimen/dp20">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp20"
        android:paddingBottom="@dimen/dp10"
        android:text="@string/bo_booking_confirmed"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_my_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp20"
        android:paddingTop="@dimen/dp8"
        android:paddingRight="@dimen/dp20"
        android:paddingBottom="@dimen/dp8"
        android:text="@string/bo_view_my_schedule"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/tv_book_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp20"
        android:paddingTop="@dimen/dp8"
        android:paddingRight="@dimen/dp20"
        android:paddingBottom="@dimen/dp8"
        android:text="@string/bo_book_another_lesson"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/tv_choose_tutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp20"
        android:paddingTop="@dimen/dp8"
        android:paddingRight="@dimen/dp20"
        android:paddingBottom="@dimen/dp8"
        android:text="@string/bo_view_other_tutors"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/colorAccent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_back_to_main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp20"
        android:paddingTop="@dimen/dp8"
        android:paddingRight="@dimen/dp20"
        android:paddingBottom="@dimen/dp8"
        android:text="@string/bo_back_main_menu"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/colorAccent"/>

</LinearLayout>