<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--<ImageView
                android:id="@+id/app_icon"
                android:layout_width="@dimen/dp250"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:src="@mipmap/engleezi"/>-->

            <TextView
                android:id="@+id/app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="60dp"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font30"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="@dimen/dp300"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_icon"
                android:layout_centerHorizontal="true"
                android:hint="@string/enter_name"
                android:maxLines="1"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/name_error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp8"
                android:fontFamily="@fonts/microsoft_jhenghei"
                android:text="@string/name_error"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="@dimen/dp300"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_error_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp10"
                android:hint="@string/enter_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/password_error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp8"
                android:fontFamily="@fonts/microsoft_jhenghei"
                android:text="@string/pass_error"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/re_password"
                android:layout_width="@dimen/dp300"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_error_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp10"
                android:hint="@string/reenter_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/re_password_error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/re_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp8"
                android:fontFamily="@fonts/microsoft_jhenghei"
                android:text="@string/repass_error"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="@dimen/dp300"
                android:layout_height="wrap_content"
                android:layout_below="@id/re_password_error_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/email_error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp8"
                android:fontFamily="@fonts/microsoft_jhenghei"
                android:text="@string/email_error"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/phone_ll"
                android:layout_width="@dimen/dp300"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_error_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal"
                android:weightSum="4">

                <Spinner
                    android:id="@+id/country_code_spinner"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:dropDownWidth="250dp"
                    android:spinnerMode="dropdown"/>

                <EditText
                    android:id="@+id/phone_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp8"
                    android:layout_weight="3"
                    android:hint="@string/enter_phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textAlignment="center"/>
            </LinearLayout>

            <TextView
                android:id="@+id/phone_error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_ll"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp8"
                android:fontFamily="@fonts/microsoft_jhenghei"
                android:text="@string/phone_error"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_error_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp20"
                android:background="@drawable/blue_btn_bg"
                android:fontFamily="@fonts/microsoft_jhenghei"
                android:paddingLeft="@dimen/dp30"
                android:paddingTop="@dimen/dp10"
                android:paddingRight="@dimen/dp30"
                android:paddingBottom="@dimen/dp10"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="@dimen/font15"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp5"
                android:layout_marginBottom="@dimen/dp20"
                android:fontFamily="@fonts/microsoft_jhenghei"
                android:text="@string/have_account"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font15"/>

            <LinearLayout
                android:id="@+id/footer_ll"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp160"
                android:layout_below="@id/login"
                android:layout_alignParentBottom="true"
                android:background="@mipmap/curve"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp20">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp30"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_marginBottom="@dimen/dp10"
                        android:fontFamily="@fonts/microsoft_jhenghei"
                        android:text="@string/login_with"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/font15"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp60"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/facebook"
                            android:layout_width="@dimen/dp60"
                            android:layout_height="@dimen/dp60"
                            android:src="@mipmap/facebook_128"/>

                        <ImageView
                            android:id="@+id/twitter"
                            android:layout_width="@dimen/dp60"
                            android:layout_height="@dimen/dp60"
                            android:layout_marginLeft="@dimen/dp20"
                            android:layout_marginRight="@dimen/dp20"
                            android:src="@mipmap/twitter_128"/>

                        <ImageView
                            android:id="@+id/google"
                            android:layout_width="@dimen/dp60"
                            android:layout_height="@dimen/dp60"
                            android:src="@mipmap/google_128"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>